PARSER/lab11_05_06/Grammatica
Main ::= StmtSeq 'EOF'
StmtSeq ::= Stmt (';'StmtSeq)?
Stmt ::= 'let'? ID '='Exp | 'print'Exp |  'if''('Exp ')''{'StmtSeq '}'('else''{'StmtSeq '}')? 
ExpSeq ::= Exp (, ExpSeq)?
Exp ::= Eq ('&&'Eq)* 
Eq ::=  Ins ('=='Ins)*
Ins ::= Uni ('in' Uni)*
Uni ::= Sec ('\/' Sec)*
Sec ::= Cat ('/\' Cat)*
Cat::=  Add ('^' Add)*
Add ::= Mul ('+' Mul)*
Mul::= Atom ('*' Atom)*
Atom ::= {ExpSeq} | '#'Exp | '['Exp ','Exp ']'| 'fst' Atom | 'snd' Atom | '-'Atom | '!'Atom | BOOL | NUM | ID | '('Exp ') '
